# plant3d

./: README.md  pyproject.toml  requirements.txt
notebooks/: 00_quickstart_colab.ipynb  00_quickstart_kaggle.ipynb  10_capture_and_calibration.ipynb  20_dino_precompute_features.ipynb  30_lift_2d_to_3d_volume.ipynb  40_volumetric_transformer_train.ipynb  50_renderer_view_synthesis.ipynb  60_geometry_refinement_train.ipynb  70_evaluation_and_visualization.ipynb
scripts/: demo_render.py  export_mesh.py  flatten_to_structured.py
src/config/: colab.yaml  kaggle.yaml
src/dataio/: camera.py  datasets.py  datasets_flat.py  loaders.py
src/eval/: mesh.py  metrics_3d.py  metrics_img.py
src/features/: dino_backbone.py  dino_utils.py
src/geometry/: grids.py  lift.py  priors.py
src/models/refinement/: cross_grounding.py  losses.py
src/models/renderer/: rays.py  render.py
src/models/volumetric_transformer/: blocks.py  heads.py  xscale.py
src/train/: optim.py  trainer_refine.py  trainer_vol.py
src/viz/: gallery.py  tensorboard.py
