[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plant3d"
version = "0.0.1"
description = "Dual-Transformer Image-to-3D Reconstruction for Fruit Plants"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
